tests/paczka1/small_fuzzy/13874789.err
Error in line 3: 7ECZsjpfrsJ S858 86,11
Error in line 9: S125 S858 28,2
Error in line 5: 7ECZsjpfrsJ S858 425,3
